import React from 'react';
import {shallow} from 'enzyme';

import {
  mockResolvedAsyncFn,
  createInstance,
  createOperation,
  flushPromises
} from 'modules/testUtils';

import {STATE, OPERATION_STATE, OPERATION_TYPE} from 'modules/constants';

import Actions from './Actions';
import ActionStatus from 'modules/components/ActionStatus';
import ActionItems from './ActionItems';

import * as service from './service';
import * as api from 'modules/api/instances/instances';

// mocking api
api.applyOperation = mockResolvedAsyncFn();

// mocking services
let isWithIncident;
let isRunning;

service.isWithIncident = jest.fn(() => isWithIncident);
service.isRunning = jest.fn(() => isRunning);
service.wrapIdinQuery = jest.fn();

describe('Actions', () => {
  let node;
  let mockOperation, mockInstance, onButtonClick;

  it('should match snapshots', () => {
    // when
    mockOperation = createOperation({state: OPERATION_STATE.SCHEDULED});
    mockInstance = createInstance({operations: [mockOperation]});
    node = shallow(<Actions instance={mockInstance} />);
    //then
    expect(node).toMatchSnapshot();

    // when
    mockOperation = createOperation({state: OPERATION_STATE.FAILED});
    mockInstance = createInstance({operations: [mockOperation]});
    node = shallow(<Actions instance={mockInstance} />);

    // then
    expect(node).toMatchSnapshot();
  });

  it('should pass props to the status component', () => {
    // when
    mockOperation = createOperation({
      state: OPERATION_STATE.SCHEDULED,
      type: OPERATION_TYPE.CANCEL_WORKFLOW_INSTANCE
    });
    mockInstance = createInstance({operations: [mockOperation]});
    node = shallow(<Actions instance={mockInstance} />);

    //then
    expect(node.find(ActionStatus).props().operationState).toBe(
      OPERATION_STATE.SCHEDULED
    );

    expect(node.find(ActionStatus).props().operationType).toBe(
      OPERATION_TYPE.CANCEL_WORKFLOW_INSTANCE
    );
  });

  describe('Action Buttons', () => {
    it('should render action buttons ', () => {
      // when
      mockInstance = createInstance({operations: []});

      node = shallow(<Actions instance={mockInstance} />);
      // then
      expect(node.find(ActionItems)).toExist();
    });

    describe('retry', () => {
      beforeEach(() => {
        mockInstance = createInstance({state: STATE.INCIDENT});
        isWithIncident = true;
        isRunning = false;
        onButtonClick = jest.fn();
        node = shallow(
          <Actions instance={mockInstance} onButtonClick={onButtonClick} />
        );
      });

      it('should render retry action item', async () => {
        const actionType = node.find(ActionItems.Item).props().type;
        expect(actionType).toBe(OPERATION_TYPE.UPDATE_JOB_RETRIES);
      });

      it('should call the retry api onClick ', () => {
        //given
        const actionItem = node.find(ActionItems.Item);

        // when
        actionItem.simulate('click');

        // then
        expect(service.wrapIdinQuery).toBeCalledWith(
          OPERATION_TYPE.UPDATE_JOB_RETRIES,
          mockInstance
        );
        expect(api.applyOperation).toBeCalledWith(
          OPERATION_TYPE.UPDATE_JOB_RETRIES,
          service.wrapIdinQuery()
        );
      });

      it('should call onButtonClick callback', async () => {
        //given
        const actionItem = node.find(ActionItems.Item);

        // when
        actionItem.simulate('click');

        // when
        await flushPromises();
        node.update();

        expect(onButtonClick).toHaveBeenCalled();
      });
    });
    describe('cancel', () => {
      beforeEach(() => {
        mockInstance = createInstance({state: STATE.ACTIVE});
        isWithIncident = false;
        isRunning = true;
        node = shallow(<Actions instance={mockInstance} />);
      });
      it('should render cancel action item', async () => {
        const actionType = node.find(ActionItems.Item).props().type;
        expect(actionType).toBe(OPERATION_TYPE.CANCEL_WORKFLOW_INSTANCE);
      });
      it('should call the cancel api onClick ', () => {
        //given
        const actionItem = node.find(ActionItems.Item);
        // when
        actionItem.simulate('click');
        // then
        expect(service.wrapIdinQuery).toBeCalledWith(
          OPERATION_TYPE.CANCEL_WORKFLOW_INSTANCE,
          mockInstance
        );
        expect(api.applyOperation).toBeCalledWith(
          OPERATION_TYPE.CANCEL_WORKFLOW_INSTANCE,
          service.wrapIdinQuery()
        );
      });
    });
  });
});
