// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should match snapshots 1`] = `
<styled.div>
  <ActionStatus
    instance={
      Object {
        "activities": Array [
          Object {
            "activityId": "activityId_0",
            "endDate": "2018-10-10T09:20:38.658Z",
            "id": "id_0",
            "startDate": "2018-10-10T09:20:38.658Z",
            "state": "ACTIVE",
          },
        ],
        "bpmnProcessId": "someKey",
        "endDate": null,
        "id": "id_1",
        "incidents": Array [
          Object {
            "activityId": Object {},
            "activityInstanceId": Object {},
            "errorMessage": "",
            "errorType": "",
            "id": "id_2",
            "jobId": "jobId_0",
            "state": "ACTIVE",
          },
        ],
        "operations": Array [
          Object {
            "endDate": "2018-10-10T09:20:38.661Z",
            "errorMessage": "string",
            "startDate": "2018-10-10T09:20:38.661Z",
            "state": "SCHEDULED",
            "type": "UPDATE_JOB_RETRIES",
          },
        ],
        "sequenceFlows": Array [],
        "startDate": "2018-06-21",
        "state": "ACTIVE",
        "workflowId": "2",
        "workflowName": "someWorkflowName",
        "workflowVersion": 1,
      }
    }
    operationState="SCHEDULED"
    operationType="UPDATE_JOB_RETRIES"
  />
  <ActionItems />
</styled.div>
`;

exports[`Actions should match snapshots 2`] = `
<styled.div>
  <ActionStatus
    instance={
      Object {
        "activities": Array [
          Object {
            "activityId": "activityId_1",
            "endDate": "2018-10-10T09:20:38.658Z",
            "id": "id_3",
            "startDate": "2018-10-10T09:20:38.658Z",
            "state": "ACTIVE",
          },
        ],
        "bpmnProcessId": "someKey",
        "endDate": null,
        "id": "id_4",
        "incidents": Array [
          Object {
            "activityId": Object {},
            "activityInstanceId": Object {},
            "errorMessage": "",
            "errorType": "",
            "id": "id_5",
            "jobId": "jobId_1",
            "state": "ACTIVE",
          },
        ],
        "operations": Array [
          Object {
            "endDate": "2018-10-10T09:20:38.661Z",
            "errorMessage": "string",
            "startDate": "2018-10-10T09:20:38.661Z",
            "state": "FAILED",
            "type": "UPDATE_JOB_RETRIES",
          },
        ],
        "sequenceFlows": Array [],
        "startDate": "2018-06-21",
        "state": "ACTIVE",
        "workflowId": "2",
        "workflowName": "someWorkflowName",
        "workflowVersion": 1,
      }
    }
    operationState="FAILED"
    operationType="UPDATE_JOB_RETRIES"
  />
  <ActionItems />
</styled.div>
`;
